# nileswan

./: .gitattributes  .gitignore  .gitmodules  Makefile  config.mk  notes.txt  readme.md
common/: swan.inc
docs/: build.sh  current_consumption.md  hugo.toml  progenv.md  retail_cartridges.md  spi_flash_layout.md
docs/content/: _index.md
docs/content/developer/: _index.md  boot_procedure.md  emulator.md  hardware_specifications.md  io_ports.md  mapper_emulation.md  mcu_protocol.md  memory_map.md  spi_flash_map.md  writing_homebrew.md
docs/content/user/: _index.md  quickstart.md  recovery.md
docs/content/user/troubleshooting/: _index.md  recovery.md
docs/layouts/partials/head/: favicons.html
docs/static/: custom.css
firmware/: CMakeLists.txt  Makefile  headerize.py  readme.md  rules.mk
firmware/src/: cdc.c  cdc.h  config.h  eeprom.c  eeprom.h  hid.c  link_L052K8.ld  link_U073KC.ld  main.c  mcu.c  mcu.h  nanoprintf.c  nvram.c  nvram.h  rtc.c  rtc.h  spi.c  spi.h  spi_cmd.c  spi_cmd.h  tusb_config.h  usb_descriptors.c
fpga/: Makefile  add_warmboot.nim  readme.md
fpga/ipl0/: fix.nim  ipl0.s
fpga/rtl/: blockram.sv  blockram_16rn_8w.sv  blockram_8r_8w.sv  bootrom.sv  clockmux.sv  dance.sv  eeprom.sv  io.pcf  ipcram.sv  nileswan.sv  rtc.sv  spi.sv  spi_io.sv  spimux.sv
fpga/rtl/benches/: eeprom_bench.sv  nileswan_bench.sv  rtc_bench.sv  spi_bench.sv  spi_io_bench.sv
fpga/rtl/benches/helper/: common_signals.sv  spi_dev.sv
ipl1/: Makefile  ipl1.s  link.ld  wfconfig.toml
ipl1/assets/: tiles.lua
ipl1/assets/mono/: pyramid.lua  swan.lua
ipl1/include/: iram.h
ipl1/misc/: ipl1_emutest.asm
ipl1/src/: crt0.s  diskio.c  main.c  ram_test.s
ipl1/src/boot/: diskio.c  diskio_asm.s  ffconf.h  main.c
ipl1/src/boot/fatfs/: diskio.h  ff.c  ff.h  ffconf.h
ipl1/src/fatfs/: ff.c
ipl1/src/nileswan/: nileswan.c  nileswan.h  nileswan_asm.s
ipl1/src/selftest/: main.c  ram_test.s
ipl1/src/shared/: crt0.s  lzsa_decompress_small_v2.s  util.h  util.s
ipl1/src/shared/nileswan/: flash_comm.c  flash_comm.h  mcu_comm.c  mcu_comm.h  nileswan.c  nileswan.h  nileswan_asm.s
manifest/: full_update.txt  user_update.txt
misc/psram_tester/: Makefile
pcb/: .gitignore  fp-lib-table  fpga.kicad_sch  memory.kicad_sch  nileswan.kicad_pcb  nileswan.kicad_pro  nileswan.kicad_sch  sym-lib-table
pcb/bom/: ibom.html
pcb/footprints/: BGA-36_6x8_6.0x8.0mm.kicad_mod  BGA-48_6x8_6.0x8.0mm.kicad_mod  WSCartridgeBus.kicad_mod  sTSOP-32.kicad_mod
pcb/snapeda/: license.txt
pcb/snapeda/footprints/: BAT_BAT-HLD-012-SMT.kicad_mod  BGA4N41X100P2X2_84X154X60N.kicad_mod  IC_AP22966DC8-7.kicad_mod  LATTICE_ICE40LP1K-QN84.kicad_mod  QFN50P250X450X100-21N.kicad_mod  SM02B-SRSS-TB_LF__SN_.kicad_mod  SON127P500X600X80-9N.kicad_mod  SON50P300X200X60-9N.kicad_mod  SOP65P490X110-8N.kicad_mod  SOTFL50P160X60-8N.kicad_mod  XTAL_AMPMAFB-25.0000T.kicad_mod
pcb/snapeda/models/: 74LVC245ABQ.step  AMPMAMPM_2.0 x 1.6 mm.step  BAT-HLD-012-SMT.step  DM3AT-SF-PEJM5--3DModel-STEP-418109.STEP  IS66WVE4M16EBLL-70BLI.STEP  SIT8021AI-J4-XXS-24.000000E.step  SM02B-SRSS-TB_LF__SN_.step  TPS2117DRLR.step  TPS3619-50DGK.step  W25Q16JVZPIQ.STEP
pcb/snapeda/symbols/: 74LVC245ABQ.kicad_sym  AMPMAFB-25.0000T.kicad_sym  AP22966DC8-7.kicad_sym  SM02B-SRSS-TB_LF__SN_.kicad_sym  TPS3619-50DGK.kicad_sym
pcb/symbols/: nileswan.kicad_sym
research/: current_consumption.md  retail_cartridges.md
shell/: shell.FCStd
software/: README.md
software/ipl0/: Makefile  fix.nim  ipl0.s
software/ipl1/: .clangd  Makefile  readme.md
software/ipl1/assets/: tiles.lua
software/ipl1/src/: bootfriend_stub.asm
software/ipl1/src/boot/: main.c
software/ipl1/src/safe/: main.c
software/ipl1/src/shared/: crt0.s  ipc.c  ipc.h  util.c  util.h  util.s
software/recovery/: Makefile
software/recovery/assets/: boring7.bdf  fonts.lua
software/recovery/assets/lib/: bdf.lua
software/recovery/src/: console.c  console.h  input.c  main.c  main.h  menu.c  strings.h  vwf8.c  vwf8.h
software/recovery/src/ops/: id_print.c  mcu_setup.c  mcu_setup.h  tf_card.h
software/updater/: Makefile  manifest.txt  manifest_to_bin.py  manifest_to_rom.py
software/updater/src/: crc16.h  crc16.s  main.c  strings.inc  text.h
software/userland/: Makefile  manifest_to_bin.py  manifest_to_rom.py  wfconfig.recovery.toml  wfconfig.updater.toml
software/userland/src/recovery/: config.h  console.c  input.h  iram.h  main.c  main.h  menu.h  strings.h  vwf8.c  vwf8.h
software/userland/src/recovery/ops/: id_print.c  id_print.h  ieeprom.c  ieeprom.h  mcu_setup.c  tf_card.c  tf_card.h
software/userland/src/recovery/tests/: flash_fsm.c  flash_fsm.h  rtc.c  rtc.h  rtc.s
software/userland/src/shared/: console.c  console.h  input.c  input.h
software/userland/src/updater/: main.c  manifest.h  strings.c  strings.h  text.c
updater/: Makefile  manifest_to_rom.py  wfconfig.toml
updater/assets/: tiles.lua
updater/src/: crc16.h  crc16.s  main.c  manifest.h  text.c
